# crate-r-svr-api

./: .gitignore  Cargo.toml  README.md
api-artifactory/: .env  Cargo.toml
api-artifactory/src/: lib.rs  model.rs  runtime.rs  up_ex.rs
api-artifactory/tests/: online_test.rs
api-dpm/: .env  Cargo.toml
api-dpm/src/: lib.rs  model.rs  runtime.rs
api-dpm/tests/: online_test.rs
api-gate/: Cargo.toml
api-gate/src/: lib.rs
api-gate/tests/: online_test.rs
api-nexus/: Cargo.toml
api-nexus/src/: lib.rs  model.rs
api-nexus/tests/: online_test.rs
api-nexus/tests/assets/: downloaded_file.txt
api-picboo/: Cargo.toml
api-picboo/src/: lib.rs
api-picboo/tests/: online_test.rs
api-release/: Cargo.toml
api-release/src/: lib.rs  model.rs
cli-common/: .gitignore  Cargo.toml
cli-common/src/: lib.rs  queue.rs
cli-common/src/util/: filesys.rs  mod.rs  shcmd.rs
lz4-dir/: Cargo.toml
lz4-dir/src/: lib.rs
lz4-dir/static/: test1
lz4-dir/tests/: tar_test.rs
rsvr-core/: Cargo.toml
rsvr-core/src/: error.rs  lib.rs
static-remote/: .gitignore  Cargo.toml
static-remote/examples/: .nexus  .s3  s3_file_list.rs  s3_sync.rs
static-remote/src/: error.rs  ihandler.rs  lib.rs  middler.rs  settings.rs  tui.rs
static-remote/src/handler/: http.rs  mod.rs  nexus.rs  s3.rs
