[package]
name = "api-artifactory"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsvr-core = { path = "../rsvr-core" }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
log = "0.4"


[dev-dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["multipart"] }