[package]
name = "api-artifactory"
version = "0.1.6beta1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
up_ex = []
default = ["up_ex"]

[dependencies]
static-remote = { path = "../static-remote" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"


[dev-dependencies]
dotenv = "0.15.0"
