[package]
name = "cli-common"
version = "0.1.0"
edition = "2021"
authors = ["dwb"]
description = "base commond tools for gamedevalop.Most of them are i/o, zip, time, crypto helpful static methods."
license = "0BSD OR MIT OR Apache-2.0"
keywords = ["command", "static", "dwb"]
exclude = [
    "target/*",
    "test/",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
log = "0.4"
fern = "0.6"
chrono = "0.4"
lazy_static = "1.4.0"
zip = "0.5"
zip-extensions = "0.6"
ignore = "0.4"
md-5 = "0.10.5"


[target.'cfg(windows)'.dependencies]
powershell_script = "1.1.0"