[package]
name = "rsvr-core"
version = "0.1.1"
edition = "2021"

[features]
sdl = []
default = ["sdl"]

[dependencies]
reqwest = {version = "0.12", features = ["json", "multipart", "stream", "rustls-tls", "blocking"], default-features = false}
url = "2"
log = "0.4"
thiserror = "2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
