[package]
name = "static-remote"
version = "0.2.4-beta2"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["full"]
s3 = []
http = []
nexus = []
full = ["http", "s3", "nexus"]


[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = "0.4"
url = "2"
reqwest = { version = "0.12", features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
    "blocking",
], default-features = false }
reqwest-middleware = "0.4"
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strfmt = "0.2"
futures-util = "0.3"
indicatif = "0.18"
anyhow = "1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.100"


[dev-dependencies]
dotenv = "0.15"
env_logger = "0.11"
